--- a/Code/ShipWorks.UI/Styles/BlueSteel/ButtonStyle.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/ButtonStyle.xaml
@@ -3,6 +3,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/ShipWorks.UI;component/Styles/Controls/ButtonStyle.xaml"/>
         <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/Colors.xaml"/>
+        <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/Shapes.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="SmallButton" TargetType="{x:Type Button}">
@@ -142,5 +143,19 @@
         <Setter Property="Background" Value="{StaticResource ButtonBackgroundGradient}"/>
         <Setter Property="BorderBrush" Value="{StaticResource BorderColor}"/>
         <Setter Property="Height" Value="28"/>
+    </Style>
+
+    <Style x:Key="Button.Copy" TargetType="{x:Type Button}">
+        <Setter Property="Padding" Value="5"/>        
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Content">
+            <Setter.Value>                
+                <Path Style="{StaticResource Copy}"
+                      Fill="{StaticResource IconColor}"
+                      Stretch="Fill"/>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
