--- a/Code/ShipWorks.OrderLookup/Controls/OrderLookup/MainOrderLookupControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/OrderLookup/MainOrderLookupControl.xaml
@@ -121,7 +121,8 @@
                    VerticalAlignment="Center"
                    Margin="0 0 10 0"
                    StretchDirection="DownOnly"
-                   Stretch="Uniform"/>
+                   Stretch="Uniform"
+                   RenderOptions.BitmapScalingMode="Fant"/>
             <TextBlock Grid.Column="1"
                        FontSize="20"
                        VerticalAlignment="Center"
