--- a/Code/ShipWorks.UI/Styles/BlueSteel/Shapes.xaml
+++ b/Code/ShipWorks.UI/Styles/BlueSteel/Shapes.xaml
@@ -1,6 +1,9 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/Colors.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
     <Style x:Key="InformationIcon" TargetType="{x:Type Path}">
         <Setter Property="Data" Value="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"/>
     </Style>
@@ -47,12 +50,12 @@
 
     <Style x:Key="Check" TargetType="{x:Type Path}">
         <Setter Property="Data" Value="M19,8 L10,17 L5,12 L6.41,10.59 L10,14.17 L17.59,6.58 L19,8"/>
-        <Setter Property="Fill" Value="#48BC23"/>
+        <Setter Property="Fill" Value="{StaticResource SuccessColor}"/>
     </Style>
-    
+
     <Style x:Key="CheckboxCircle" TargetType="{x:Type Path}">
-        <Setter Property="Data" Value="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/>
-        <Setter Property="Fill" Value="#48BC23"/>
+        <Setter Property="Data" Value="M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8L10,17M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"/>
+        <Setter Property="StrokeEndLineCap" Value="Square"/>
     </Style>
 
     <Style x:Key="CheckboxDecagram" TargetType="{x:Type Path}">
