TP#36304: Change Packed column to Verified. Update messaging when waiting for an order barcode scan in the scan tab.

--- a/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanPack/ScanPackControl.xaml
@@ -100,7 +100,7 @@
                     Grid.Column="2"
                     DataContext="{Binding .}"
                     IsEnabled="{Binding Enabled}"/>
-                <scanPack:PackedControl
+                <scanPack:VerifiedControl
                     Grid.Column="4"
                     Margin="0,0,4,0"
                     DataContext="{Binding .}"
