TP#36223: Disable the product editor while saving to avoid double clicking the save button

--- a/Code/ShipWorks.Products.UI/ProductEditorDialog.xaml
+++ b/Code/ShipWorks.Products.UI/ProductEditorDialog.xaml
@@ -28,7 +28,7 @@
             </Style>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Margin="10">
+    <Grid Margin="10" IsEnabled="{Binding CanEdit}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
