--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -14,6 +14,7 @@
     <UserControl.Resources>
         <ui:EmptyMoneyConverter x:Key="EmptyMoney"/>
         <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <ui:BooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" Invert="True"/>
     </UserControl.Resources>
     <StackPanel HorizontalAlignment="Left">
         <TextBlock Text="Manage ShipWorks One Balance" FontSize="15" Margin="5,10,0,0" FontWeight="Bold"/>
@@ -25,9 +26,9 @@
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Text="{Binding Message}" Grid.ColumnSpan="2" FontSize="12" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding ShowMessage, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-            <TextBlock Text="Balance" FontSize="12" HorizontalAlignment="Left" Grid.Column="0" Visibility="{Binding ShowBalance, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-            <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" FontSize="12" HorizontalAlignment="Right" Grid.Column="1" Margin="0,0,20,0" Visibility="{Binding ShowBalance, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <TextBlock Text="{Binding Message}" Grid.ColumnSpan="2" FontSize="12" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding ShowMessage, Converter={StaticResource BooleanToVisibilityConverter}}" MaxWidth="500"/>
+            <TextBlock Text="Balance" FontSize="12" HorizontalAlignment="Left" Grid.Column="0" Visibility="{Binding ShowBalance, Converter={StaticResource InvertedBooleanToVisibilityConverter}}"/>
+            <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" FontSize="12" HorizontalAlignment="Right" Grid.Column="1" Margin="0,0,20,0" Visibility="{Binding ShowBalance, Converter={StaticResource InvertedBooleanToVisibilityConverter}}"/>
         </Grid>
         <Button HorizontalAlignment="Right" Margin="0,50,0,0">
             <TextBlock Text="Add Money" FontSize="12" Margin="5,2,5,2"/>
