--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -49,7 +49,7 @@
                 </TextBlock.Visibility>
             </TextBlock>
         </Grid>
-        <Button HorizontalAlignment="Right" Margin="0,50,0,0">
+        <Button HorizontalAlignment="Right" Margin="0,50,0,0" Command="{Binding ShowAddMoneyDialogCommand}">
             <TextBlock Text="Add Money" FontSize="12" Margin="5,2,5,2"/>
         </Button>
     </StackPanel>
