--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -5,13 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ShipWorks.Shipping.UI.Settings.OneBalance"
         xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
+        xmlns:c="http://schemas.shipworks.com/ui"
         mc:Ignorable="d"
         Title="Add Money To One Balance" Height="250" Width="300" Background="#FFF0F0F0">
+    <ui:InteropWindow.Resources>
+        <c:EmptyMoneyConverter x:Key="EmptyMoney"/>
+    </ui:InteropWindow.Resources>
     <StackPanel HorizontalAlignment="Center">
         <TextBlock Text="Enter an amount to prepay for postage with your shipworks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0" FontSize="12"/>
         <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" HorizontalAlignment="Center" FontSize="13" FontWeight="Bold"/>
-        <TextBox Text="$0.00" HorizontalAlignment="Center" Margin="0,10,0,0" MinWidth="60" MinHeight="20" TextAlignment="Right" FontSize="13" FontWeight="Bold"/>
-        <Button HorizontalAlignment="Center" Margin="0,30,0,0">
+        <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Center" Margin="0,10,0,0" MinWidth="60" MinHeight="20" TextAlignment="Right" FontSize="13" FontWeight="Bold"/>
+        <Button HorizontalAlignment="Center" Margin="0,30,0,0" Command="{Binding BuyPostageCommand}">
             <TextBlock Text="Add" Margin="12,2,12,2" FontSize="13"/>
         </Button>
     </StackPanel>
