--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -7,16 +7,20 @@
         xmlns:ui="clr-namespace:Interapptive.Shared.UI;assembly=Interapptive.Shared"
         xmlns:c="http://schemas.shipworks.com/ui"
         mc:Ignorable="d"
-        Title="Add Money To One Balance" Height="250" Width="300" Background="#FFF0F0F0">
+        Title="Add Money To One Balance" 
+        Height="250" 
+        Width="300" 
+        Background="#FFF0F0F0"
+        FontSize="12">
     <ui:InteropWindow.Resources>
         <c:EmptyMoneyConverter x:Key="EmptyMoney"/>
     </ui:InteropWindow.Resources>
     <StackPanel HorizontalAlignment="Center">
-        <TextBlock Text="Enter an amount to prepay for postage with your shipworks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0" FontSize="12"/>
-        <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" HorizontalAlignment="Center" FontSize="13" FontWeight="Bold"/>
+        <TextBlock Text="Enter an amount to prepay for postage with your shipworks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0"/>
+        <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" HorizontalAlignment="Center" FontWeight="Bold"/>
         <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Center" Margin="0,10,0,0" MinWidth="60" MinHeight="20" TextAlignment="Right" FontSize="13" FontWeight="Bold"/>
         <Button HorizontalAlignment="Center" Margin="0,30,0,0" Command="{Binding BuyPostageCommand}">
-            <TextBlock Text="Add" Margin="12,2,12,2" FontSize="13"/>
+            <TextBlock Text="Add" Margin="12,2,12,2"/>
         </Button>
     </StackPanel>
 </ui:InteropWindow>
