--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -19,8 +19,17 @@
         <TextBlock Text="Enter an amount to prepay for postage with your shipworks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0"/>
         <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" HorizontalAlignment="Center" FontWeight="Bold"/>
         <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Center" Margin="0,10,0,0" MinWidth="60" MinHeight="20" TextAlignment="Right" FontSize="13" FontWeight="Bold"/>
-        <Button HorizontalAlignment="Center" Margin="0,30,0,0" Command="{Binding BuyPostageCommand}">
-            <TextBlock Text="Add" Margin="12,2,12,2"/>
-        </Button>
+        <Grid Margin="0,20,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button HorizontalAlignment="Center" Margin="0" Command="{Binding BuyPostageCommand}" VerticalAlignment="Center" Width="65">
+                <TextBlock Text="Add" Margin="0,2,0,2"/>
+            </Button>
+            <Button HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Grid.Column="1" Width="65" IsCancel="True">
+                <TextBlock Text="Cancel" Margin="0,2,0,2"/>
+            </Button>
+        </Grid>
     </StackPanel>
 </ui:InteropWindow>
