--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -10,16 +10,23 @@
         Title="Add Money To One Balance" 
         Height="250" 
         Width="300" 
-        Background="#FFF0F0F0"
-        FontSize="12">
+        Background="#FFF0F0F0">
     <ui:InteropWindow.Resources>
-        <c:EmptyMoneyConverter x:Key="EmptyMoney"/>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/GlobalStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="TextBlock" BasedOn="{StaticResource Grid.TextBlock.Label}" />
+            <Style TargetType="TextBox" BasedOn="{StaticResource Grid.TextBox.Number}" />
+            <c:EmptyMoneyConverter x:Key="EmptyMoney"/>
+        </ResourceDictionary>
     </ui:InteropWindow.Resources>
     <StackPanel HorizontalAlignment="Center">
-        <TextBlock Text="Enter an amount to prepay for postage with your shipworks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0"/>
-        <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" HorizontalAlignment="Center" FontWeight="Bold"/>
-        <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Center" Margin="0,10,0,0" MinWidth="60" MinHeight="20" TextAlignment="Right" FontSize="13" FontWeight="Bold"/>
-        <Grid Margin="0,20,0,0">
+        <TextBlock Text="Enter an amount to prepay for postage with your ShipWorks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0"/>
+        <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" Style="{StaticResource TextBlock.SectionHeader}" HorizontalAlignment="Center"/>
+        <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Center" Margin="0,10,0,0" TextAlignment="Right"/>
+        <Grid Margin="0,40,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
