TP #37562: Switch cursor to wait while we add money so that the user knows we're still waiting on the reply from stamps

--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -10,7 +10,8 @@
         Title="Add Money To One Balance" 
         Height="250" 
         Width="300" 
-        Background="#FFF0F0F0">
+        Background="#FFF0F0F0"
+        Cursor="{Binding Cursor}">
     <ui:InteropWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
