--- a/Code/ShipWorks.Products.UI/ProductEditorDialog.xaml
+++ b/Code/ShipWorks.Products.UI/ProductEditorDialog.xaml
@@ -13,6 +13,7 @@
         Title="{Binding DialogTitle}" 
         Height="860"
         Width="700"
+                        Closing="HandleClosing"
         FontFamily="/ShipWorks.UI;component/Styles/BlueSteel/#Roboto"
         d:DataContext="{d:DesignInstance productEditor:ProductEditorViewModel}">
     <Window.Resources>
@@ -21,8 +22,8 @@
                 <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <ui:EmptyMoneyConverter x:Key="EmptyMoney" />
-            <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
-            <ui:BooleanToVisibilityConverter x:Key="InvertBooleanToVisibility" Invert="True"/>
+            <ui:BooleanToVisibilityConverter x:Key="ShowWhenTrue"/>
+            <ui:BooleanToVisibilityConverter x:Key="HideWhenTrue" Invert="True"/>
             <Style TargetType="{x:Type ui:UnitTextBox}">
                 <Setter Property="Margin" Value="10 0 0 10"/>
             </Style>
@@ -107,7 +108,7 @@
                    Grid.Column="0"
                    Text="Created Date"
                    Style="{StaticResource FieldLabel}"
-                   Visibility="{Binding IsNew, Converter={StaticResource InvertBooleanToVisibility}}"/>
+                   Visibility="{Binding IsNew, Converter={StaticResource HideWhenTrue}}"/>
 
             <TextBlock Grid.Row="5"
                    Grid.Column="1"
@@ -116,7 +117,7 @@
                    TextAlignment="Left"
                    HorizontalAlignment="Left"
                    Margin="10 0 0 10"
-                   Visibility="{Binding IsNew, Converter={StaticResource InvertBooleanToVisibility}}"/>
+                   Visibility="{Binding IsNew, Converter={StaticResource HideWhenTrue}}"/>
 
             <TextBlock Grid.Row="6"
                    Grid.Column="0"
@@ -188,7 +189,7 @@
                  Grid.Column="1"
                  Text="{Binding EAN, UpdateSourceTrigger=PropertyChanged}"
                  Style="{StaticResource FormTextBox}"/>
-            
+
             <TextBlock Grid.Row="13"
                    Grid.Column="0"
                    Text="Weight"
@@ -303,7 +304,7 @@
                            Style="{StaticResource Header}"/>
                 <productsUI:AliasEditorControl Grid.Row="1"
                                                DataContext="{Binding AliasEditorViewModel}"/>
-            </Grid>            
+            </Grid>
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
@@ -316,7 +317,7 @@
                                                    DataContext="{Binding AttributeEditorViewModel}"/>
             </Grid>
             <Grid Margin="0 15 0 0"
-                  Visibility="{Binding Path=IsBundle, Converter={StaticResource BooleanToVisibility},
+                  Visibility="{Binding Path=IsBundle, Converter={StaticResource ShowWhenTrue},
                                                     UpdateSourceTrigger=PropertyChanged}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
@@ -337,11 +338,15 @@
             HorizontalAlignment="Right"
             Grid.IsSharedSizeScope="True">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto" SharedSizeGroup="A"/>
                 <ColumnDefinition Width="auto" SharedSizeGroup="A"/>
             </Grid.ColumnDefinitions>
+            <ui:WaitSpinner Visibility="{Binding CanEdit, Converter={StaticResource HideWhenTrue}}"
+                            BorderThickness="0"/>
+
             <Button
-                Grid.Column="0"
+                Grid.Column="1"
                 IsCancel="True"
                 Command="{Binding Cancel}"
                 Margin="0 0 10 0"
@@ -349,7 +354,7 @@
                 Content="Cancel"/>
 
             <Button
-                Grid.Column="1"
+                Grid.Column="2"
                 Command="{Binding Save}"
                 Style="{StaticResource SmallPrimaryButton}"
                 Content="Save"/>
