--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -7,6 +7,7 @@
              xmlns:local="clr-namespace:ShipWorks.Shipping.UI.Settings.OneBalance"
              xmlns:ui="http://schemas.shipworks.com/ui"
              mc:Ignorable="d" 
+             Name="settingsControl"
              FontFamily="Tahoma"
              d:DesignHeight="450" 
              d:DesignWidth="800">
@@ -17,6 +18,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <Style TargetType="TextBlock" BasedOn="{StaticResource Grid.TextBlock.Label}" />
+            <Style TargetType="TextBox" BasedOn="{StaticResource Grid.TextBox.Number}" />
             <ui:EmptyMoneyConverter x:Key="EmptyMoney"/>
             <ui:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             <ui:BooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" Invert="True"/>
@@ -28,34 +30,66 @@
             <i:InvokeCommandAction Command="{Binding GetBalanceCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
-    <StackPanel HorizontalAlignment="Left">
-        <TextBlock Text="Manage ShipWorks One Balance" FontSize="13" Margin="20,10,0,0" FontWeight="Bold"/>
-        <Border Margin="50,30,0,0" BorderThickness="0,0,0,2" BorderBrush="DarkGray" MinWidth="500">
-            <TextBlock Margin="0,0,0,10" Text="Account Overview" Style="{StaticResource TextBlock.SectionHeader}"/>
-        </Border>
-        <Grid HorizontalAlignment="Right" Margin="0,15,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Text="{Binding Message}" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding ShowMessage, Converter={StaticResource BooleanToVisibilityConverter}}" MaxWidth="500"/>
-            <TextBlock Text="Balance" HorizontalAlignment="Left" Grid.Column="0" Visibility="{Binding ShowMessage, Converter={StaticResource InvertedBooleanToVisibilityConverter}}"/>
-            <TextBlock Text="Getting Balance...." HorizontalAlignment="Right" Grid.Column="1" Margin="0,0,20,0" Visibility="{Binding Loading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-            <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Right" Grid.Column="1" Margin="0,0,20,0">
-                <TextBlock.Visibility>
-                    <MultiBinding Converter="{StaticResource VisibilityMultiConverter}">
-                        <Binding
-                        Converter="{StaticResource InvertedBooleanToVisibilityConverter}"
-                        Path="Loading"/>
-                        <Binding
-                        Converter="{StaticResource InvertedBooleanToVisibilityConverter}"
-                        Path="ShowMessage"/>
-                    </MultiBinding>
-                </TextBlock.Visibility>
-            </TextBlock>
-        </Grid>
-        <Button HorizontalAlignment="Right" Margin="0,50,0,0" Command="{Binding ShowAddMoneyDialogCommand}" IsEnabled="{Binding AddMoneyEnabled}">
-            <TextBlock Text="Add Money" Margin="5,2,5,2"/>
-        </Button>
-    </StackPanel>
+    <ScrollViewer MaxHeight="{Binding ActualHeight, ElementName=settingsControl}">
+        <DockPanel>
+            <StackPanel HorizontalAlignment="Left" Margin="0,0,20,0" DockPanel.Dock="Top" Width="500">
+                <TextBlock Text="Manage ShipWorks One Balance" FontSize="13" Margin="20,10,0,0" FontWeight="Bold"/>
+                <ContentControl Visibility="{Binding ShowBanner, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <local:OneBalanceEnableUpsBannerWpfControl DataContext="{Binding BannerContext}" Margin="50,15,0,0" />
+                </ContentControl>
+                <!--#region Overview-->
+                <Border Margin="50,30,0,0" BorderThickness="0,0,0,2" BorderBrush="DarkGray">
+                    <TextBlock Margin="0,0,0,10" Text="Account Overview" Style="{StaticResource TextBlock.SectionHeader}"/>
+                </Border>
+                <Grid Margin="90,15,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="{Binding Message}" Grid.ColumnSpan="2" Foreground="#FFD32323" TextWrapping="Wrap" Visibility="{Binding ShowMessage, Converter={StaticResource BooleanToVisibilityConverter}}" MaxWidth="500"/>
+                    <TextBlock Text="Balance" HorizontalAlignment="Left" Grid.Column="0" Visibility="{Binding ShowMessage, Converter={StaticResource InvertedBooleanToVisibilityConverter}}"/>
+                    <TextBlock Text="Getting Balance...." HorizontalAlignment="Right" Grid.Column="1" Margin="0,0,20,0" Visibility="{Binding Loading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                    <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Right" Grid.Column="1" Margin="0,0,20,0">
+                        <TextBlock.Visibility>
+                            <MultiBinding Converter="{StaticResource VisibilityMultiConverter}">
+                                <Binding
+                                Converter="{StaticResource InvertedBooleanToVisibilityConverter}"
+                                Path="Loading"/>
+                                <Binding
+                                Converter="{StaticResource InvertedBooleanToVisibilityConverter}"
+                                Path="ShowMessage"/>
+                            </MultiBinding>
+                        </TextBlock.Visibility>
+                    </TextBlock>
+                    <Button HorizontalAlignment="Right"  Command="{Binding ShowAddMoneyDialogCommand}" IsEnabled="{Binding AddMoneyEnabled}" Grid.Column="2">
+                        <TextBlock Text="Add Money" Margin="5,2,5,2"/>
+                    </Button>
+                </Grid>
+                
+                <!--#endregion-->
+                <!--#region Carrier Accounts-->
+                <Border Margin="50,30,0,0" BorderThickness="0,0,0,2" BorderBrush="DarkGray">
+                    <TextBlock Margin="0,0,0,10" Text="One Balance Carrier Accounts" Style="{StaticResource TextBlock.SectionHeader}"/>
+                </Border>
+                <Grid Margin="90,15,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="15"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="25"/>
+                        <RowDefinition Height="25"/>
+                    </Grid.RowDefinitions>
+                    <Image Source="/ShipWorks.UI;component/Resources/usps.png" Style="{StaticResource Image.Icon}"/>
+                    <TextBlock Text="USPS from Stamps.com" Grid.Column="1" Margin="5,0,0,0"/>
+                    <Image Source="/ShipWorks.UI;component/Resources/ups.png" Style="{StaticResource Image.Icon}" Grid.Row="2"/>
+                    <TextBlock Text="UPS from ShipWorks" Grid.Column="1" Grid.Row="1" Margin="5,0,0,0"/>
+                </Grid>
+                <!--#endregion-->
+            </StackPanel>
+            <TextBlock Text="UPS, the UPS Shield trademark, the UPS Ready mark, the UPS Developer Kit mark and the Color Brown are trademarks of United Service of America, Inc. All Rights Reserved"
+                           Margin="0,20,0,0" DockPanel.Dock="Bottom" FontSize="8" TextWrapping="Wrap" VerticalAlignment="Bottom" TextAlignment="Center"/>
+        </DockPanel>
+    </ScrollViewer>
 </UserControl>
