--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceAddMoneyDialog.xaml
@@ -24,7 +24,12 @@
         </ResourceDictionary>
     </ui:InteropWindow.Resources>
     <StackPanel HorizontalAlignment="Center">
-        <TextBlock Text="Enter an amount to prepay for postage with your ShipWorks One Balance account." TextWrapping="Wrap"  Margin="0,20,0,0"/>
+        <TextBlock TextWrapping="Wrap"  Margin="0,20,0,0">
+            Enter an amount to prepay for postage with your ShipWorks One Balance account.
+            <Hyperlink NavigateUri="https://support.shipworks.com/hc/en-us/articles/360039872952" c:Link.OpenInBrowser="true">
+                Learn More
+            </Hyperlink>
+        </TextBlock>
         <TextBlock Text="Amount" TextAlignment ="Center" Margin="0,30,0,0" Style="{StaticResource TextBlock.SectionHeader}" HorizontalAlignment="Center"/>
         <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" HorizontalAlignment="Center" Margin="0,10,0,0" TextAlignment="Right"/>
         <Grid Margin="0,40,0,0">
