--- a/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/OneBalance/OneBalanceSettingsControl.xaml
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              Name="settingsControl"
              FontFamily="Tahoma"
-             d:DesignHeight="450" 
+             d:DesignHeight="800" 
              d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -93,9 +93,38 @@
                     <local:OneBalanceAddDhlExpressBanner DataContext="{Binding DhlBannerContext}" Margin="0,10,0,0" />
                 </ContentControl>
                 <!--#endregion-->
+                <!--#region Auto Fund-->
+                <Border Margin="50,30,0,0" BorderThickness="0,0,0,2" BorderBrush="DarkGray">
+                    <TextBlock Margin="0,0,0,10" Text="Fund Automatically" Style="{StaticResource TextBlock.SectionHeader}"/>
+                </Border>
+                <Grid HorizontalAlignment="Left" Margin="90,20,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="Current Account Balance" />
+                    <TextBlock Text="Getting Balance...." Grid.Column="1" Visibility="{Binding Loading, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                    <TextBlock Text="{Binding Balance, Converter={StaticResource EmptyMoney}}" Visibility="{Binding Loading, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" Grid.Column="1"/>
+
+                    <TextBlock Text="Use automatic funding" Grid.Row="1" Margin="0,20,10,0"/>
+                    <CheckBox Margin="0,20,0,0" Grid.Row="1" Grid.Column="2"/>
+
+                    <TextBlock Text="When balance drops below" Grid.Row="2" Margin="0,20,10,0"/>
+                    <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+
+                    <TextBlock Text="Automatically fund by this amount" Grid.Row="3" Margin="0,20,10,0"/>
+                    <TextBox Text="{Binding Amount, Converter={StaticResource EmptyMoney}}" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" Margin="0,20,0,0"/>
+                </Grid>
+                <!--#endregion-->
             </StackPanel>
             <TextBlock Text="UPS, the UPS Shield trademark, the UPS Ready mark, the UPS Developer Kit mark and the Color Brown are trademarks of United Service of America, Inc. All Rights Reserved"
-                           Margin="0,20,0,0" DockPanel.Dock="Bottom" FontSize="8" TextWrapping="Wrap" VerticalAlignment="Bottom" TextAlignment="Center"/>
+                           Margin="0,80,0,0" DockPanel.Dock="Bottom" FontSize="8" TextWrapping="Wrap" VerticalAlignment="Bottom" TextAlignment="Center"/>
         </DockPanel>
     </ScrollViewer>
 </UserControl>
